Start food implementation
store food for every monster
add code for food interactions
add a dictionnary for player's foods and initialise it at game start
fix food singletons
add player's food list to monster box menu

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Assets\Classes\Foods\Steak.cs" />
     <Compile Include="Assets\Classes\Foods\Thon.cs" />
     <Compile Include="Assets\Classes\InteractionFood.cs" />
+    <Compile Include="Assets\Classes\ListInteractionFood.cs" />
     <Compile Include="Assets\Classes\Meal.cs" />
     <Compile Include="Assets\Classes\Monster.cs" />
     <Compile Include="Assets\Classes\Player.cs" />
